--- a/style.css
+++ b/style.css
@@ -18,20 +18,25 @@ html, body {
 /* Se aplica CSS para el componente header además de sus elementos hijos*/
 #header {
     width: 100%;
-    height: 25%;
+    height: 10%;
 
     display: flex;
-    align-content: space-between;
-
 }
 
-#header img {
+#header h1 {
     padding: 0;
+
+    width: auto;
+    height: 20%;
+
+    margin-left: 5%;
     margin-top: 1%;
 
-    width: 20%;
-    height: 90%;
-    margin-left: 1%;
+    color:  #9a9b9c;
+}
+
+#header .left, .right {
+    color:#008B8B;
 }
 
 #header ul {
@@ -47,11 +52,10 @@ html, body {
 }
 
 #header ul > li {
-    width: 30%;
-    height: 10%;
+    width: 20%;
+    height: 25%;
 
     margin-top: 5%;
-
 }
 
 #header ul > li > a {
@@ -70,6 +74,21 @@ html, body {
 #header ul > li:hover {
     background-color:  #525252;
     border-radius: 10px;
+}
+
+#header ul > .colm {
+    width: 0.1%;
+    height: 25%;
+
+    margin-top: 5%;
+    margin-left: 1%;
+    margin-right: 1%;
+    background-color: #9a9b9c;
+}
+
+.sec {
+    background-color: #525252;
+    display: block;
 }
 
 
