--- a/style.css
+++ b/style.css
@@ -92,3 +92,64 @@ html, body {
 }
 
 
+.info {
+    width: 100%;
+    height: 60%;
+    background-color: red;
+    display: flex;
+}
+
+.info > div {
+    width: 50%;
+    height: 50%;
+    background-color: yellow;
+    position: absolute;
+}
+
+
+
+/*Definicion de keyframes para animaciones*/
+@keyframes animateExp {
+    100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.10;
+
+    }
+    40% {
+        opacity: 0.15;
+    }
+    35% {
+        opacity: 0.30;
+    }
+    30% {
+        opacity: 0.40;
+    }
+    15% {
+        opacity: 0.55;
+    }
+    
+    10% {
+        opacity: 0.70;
+    }
+    5% {
+        opacity: 0.90;
+    }
+    0%{
+        opacity: 1;
+    }
+}
+
+.expProf {
+    animation: animateExp 30s;
+}
+
+.compClave {
+    opacity: 0;
+}
+
+.formAcad {
+    opacity: 0;
+}
+
