--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
 }
 
 html, body {
-    height: 100%;
-    /*overflow: hidden;*/
+    height: auto;
+    overflow-y: auto;
     background-color: #121212;
 }
 
@@ -26,13 +26,13 @@ html, body {
 #header h1 {
     padding: 0;
 
-    width: auto;
+    width: 25%;
     height: 20%;
-
-    margin-left: 5%;
-    margin-top: 1%;
+    
+    margin: 1% 0 1% 1%;
 
     color:  #9a9b9c;
+
 }
 
 #header .left, .right {
@@ -43,12 +43,12 @@ html, body {
     padding: 0;
     margin: 0;
 
-    width: 35%;
+    width: 45%;
     list-style: none;
     display: flex;
     flex-direction: row;
 
-    margin-left: 50%;
+    margin-left: 45%;
 }
 
 #header ul > li {
@@ -74,6 +74,7 @@ html, body {
 #header ul > li:hover {
     background-color:  #525252;
     border-radius: 10px;
+    
 }
 
 #header ul > .colm {
@@ -86,70 +87,77 @@ html, body {
     background-color: #9a9b9c;
 }
 
-.sec {
-    background-color: #525252;
-    display: block;
+/* Div settings */
+#info {
+    min-height: 100%;
+    color: #9a9b9c;
+    padding-bottom: 1%;
 }
 
-
-.info {
-    width: 100%;
-    height: 60%;
-    background-color: red;
-    display: flex;
+#info h1, h2, p {
+    margin: 1% 0 1% 1%;
 }
 
-.info > div {
-    width: 50%;
-    height: 50%;
-    background-color: yellow;
-    position: absolute;
+#info p {
+    font-size: 1.15rem;
 }
 
-
-
-/*Definicion de keyframes para animaciones*/
-@keyframes animateExp {
-    100% {
-        opacity: 1;
-    }
-    50% {
-        opacity: 0.10;
-
-    }
-    40% {
-        opacity: 0.15;
-    }
-    35% {
-        opacity: 0.30;
-    }
-    30% {
-        opacity: 0.40;
-    }
-    15% {
-        opacity: 0.55;
-    }
-    
-    10% {
-        opacity: 0.70;
-    }
-    5% {
-        opacity: 0.90;
-    }
-    0%{
-        opacity: 1;
-    }
+#info ul {
+    font-size: 1.15rem;
+    margin: 0 3% 1% 5%;
 }
 
-.expProf {
-    animation: animateExp 30s;
+#info ul > li {
+    margin-bottom: 1%;
+    text-align: justify;
 }
 
-.compClave {
-    opacity: 0;
+#info table {
+    margin: 1% 0 1% 3%;
+    font-size: 1.15rem;
+
+    width: 70%;
+    height: 100%;
+}
+
+#info table  td {
+    padding: 1%;
+    text-align: justify;
 }
 
 .formAcad {
-    opacity: 0;
+    width: 100%;
+    height: 100%;
+    
+}
+
+.formAcad #univ, #cole {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 0 1% 1%;
+}
+
+#info .formAcad #univ > div {
+    width: 50%;
+    height: 100%;
+    text-align: justify;
+}
+
+#info .formAcad #univ > div h2,
+#info .formAcad #univ > div h3 {
+    margin: 1% 0 1% 5%;
+}
+
+#info .formAcad #cole > div {
+    width: 50%;
+    height: 100%;
+    text-align: justify;
+}
+
+#info .formAcad #cole > div h2,
+#info .formAcad #cole > div h3 {
+    margin: 1% 0 1% 5%;
 }
 
